# GP-Benchmark

./: .gitignore  AgentChanges.txt  EXACTGP_CG_EXPLAINED.md  README.md  main.py  pyproject.toml
Warmup/: dataset.py  model.py  poc_main.py
run_configs/: test.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
src/: helpers.py  kmeans.py  main.py  notes.txt  questions.txt  test.py
src/Datasets/: RegressionDataset.py  UCIParkinsons.py  UCIWine.py
src/Regressors/: ExactGP.py
src/datasets/: regression_dataset.py  synthetic_simple.py  uci_parkinsons.py  uci_wine.py
src/datasets/localfiles/: SimpleSyntheticDataset.pt  UCIParkinsonsTelemonitoring.pt  UCIWineQuality.pt
src/misc/: gp_from_scratch.ipynb
src/regressors/: cagp.py  exactgp.py  exactgp_conjg_gradients.py  svgp.py
src/regressors/additional_sources/: block_diag_sparse_linop.py
src/regressors/additional_sources/gps/: computaion_aware.py
src/regressors/additional_sources/mlls/: comp_aware_elbo.py
src/results/SimpleSyntheticDataset/ExactGP/: results.json
src/results/UCIParkinsonsTelemonitoring/ExactGP/: results.json
src/results/UCIWineQuality/CAGP/: 16-07-2026_13-30-38.json  16-07-2026_20-37-08.json  16-07-2026_20-40-06.json
src/results/UCIWineQuality/ExactGP/: 16-07-2026_09-38-49.json  16-07-2026_11-08-43.json  16-07-2026_11-21-33.json  16-07-2026_20-37-09.json  16-07-2026_20-40-08.json  results.json
src/results/UCIWineQuality/ExactGPConjGradients/: 16-07-2026_09-39-29.json  16-07-2026_11-11-27.json  16-07-2026_11-26-08.json  16-07-2026_11-32-51.json  16-07-2026_11-35-32.json  16-07-2026_20-37-11.json  16-07-2026_20-40-13.json
src/results/UCIWineQuality/SVGP/: 16-07-2026_20-41-13.json  16-07-2026_20-42-11.json  16-07-2026_20-43-13.json
