[project]
name = "gaussian-processes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "cuda-toolkit>=13.0.2",
    "gpjax>=0.14.0",
    "gpytorch>=1.15.2",
    "matplotlib>=3.10.9",
    "pykeops>=2.3",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "ucimlrepo>=0.0.7",
]

[tool.basedpyright]
typeCheckingMode = "standard" # or "basic"
reportPrivateImportUsage=false
reportArgumentType= false
reportOperatorIssue= false
reportAttributeAccessIssue=false
reportOptionalSubscript=false

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
